style: fix content card alignment

--- a/style.css
+++ b/style.css
@@ -12,42 +12,67 @@
     --bold-text:700;
 }
 
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
+}
 
 body {
     font-size: 15px;
     font-family: 'Outfit', sans-serif ;
     background-color: var(--slate-300);
+    
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .content {
     max-width: 320px;
     max-height: 499px;
     background-color: var(--white);
-    border-radius: 5px;
+    border-radius: 20px;
     padding: 16px;
-    
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 img {
-
+    max-width: 288px;
+    max-height: 288px;
+    border-radius: 10px;
 }
 
 .content-text{
-
+    max-width: 288px;
+    /* height: 131px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
 }
 
 .heading {
-
+    font-size: 20px;
+    font-weight: var(--bold-text);
+    text-align: center;
+    /* height: 52px; */
+    padding-bottom: 16px;
 }
 
 .description{
-
+    font-weight: var(--light-text);
+    color: var(--slate-500);
+    text-align: center;
+    height: 63px;
 }
 
 .attribution { 
@@ -57,4 +82,8 @@ img {
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+footer {
+    padding-bottom: 16px;
 }
